# C_language

./: C_language.docx
C_language/: C_language.docx
bet_game/: bet_main.c
bet_main/: main.h
crc/: main.c
funpointer/: CMakeLists.txt
funpointer/lib/: happy.h  main.h
funpointer/src/: happy.c  main.c
mutable_array/: main.c  main.h
pointer/: main.c  main.h  pointer.c
structure/: main.c
vocubulary/: main.c
vscode/: 不知道minGW64是那个的看点这个.txt
vscode/multiple_files/: add.c  test.c
vscode/test_12_14/: add.c  test.c
vscode/test_12_15/: sub.c
浙江大学浙大翁凯c语言/: 01找钱钱.cpp  02找钱.cpp  03计算a+b的值.cpp  04英寸换算cm.cpp  05计算时间差.cpp  06交换两个值.cpp  07自增自减.cpp  08判断年龄.cpp  09分段函数 .cpp  10判断输入type的值.cpp  11求数字的长度.cpp  12求log2x的对数.cpp  13计算任意个数的平均值.cpp  14猜数字.cpp  15逆序输出.cpp  16求10的阶乘.cpp  17判断素数.cpp  18打印100以内的素数.cpp  19凑硬币.cpp  20求n分之一的前n项和.cpp  21整数分解.cpp  22求最大公约数.cpp  23辗转相除法求最大公约数.cpp  24函数-判断素数.cpp  25求m到n的和.cpp  26数组-求平均数.cpp  27统计数字出现的次数.cpp  28素数表-判断素数.cpp  29二维数组-井字棋.cpp  30打印各类型的字节.cpp  31指针.cpp  32指针-交换两个值.cpp  33指针两个整数做除法.cpp  34数组地址的思考.cpp  35指针的运算.cpp  36指针-动态内存分配.cpp  37指针数组实现打印月份.cpp  38指针数组和数组指针的思考.cpp  39字符串的输入输出函数.cpp  40字符串函数-strlen().cpp  (+27 more)
浙江大学浙大翁凯c语言/001ACLLib/: 001ACLLib.dev
浙江大学浙大翁凯c语言/01项目测试/: 1求m-n的和.dev  1求m-n的和.layout  Makefile.win  anySum.c  anySum.h  main.c
浙江大学浙大翁凯c语言/02学生信息管理-写数据/: Makefile.win  getListAndSave.c  main.c  student.data  students.h  学生信息管理程序.dev  学生信息管理程序.layout
浙江大学浙大翁凯c语言/03学生信息管理-读数据/: 03学生信息管理-读数据.dev  03学生信息管理-读数据.layout  Makefile.win  main.c  students.h
浙江大学浙大翁凯c语言/04可变数组/: 04可变数组.dev  04可变数组.layout  Makefile.win  (+2 more)
(+5 files in other folders)
